--- a/amzn-q-auth-tvm/lambdas/q-biz/Dockerfile
+++ b/amzn-q-auth-tvm/lambdas/q-biz/Dockerfile
@@ -7,7 +7,7 @@ COPY app.py ${LAMBDA_TASK_ROOT}/
 RUN pip install --upgrade pip
 COPY boto3-1.35.59-py3-none-any.whl .
 COPY botocore-1.35.59-py3-none-any.whl .
-RUN pip install ./botocore-1.35.59-py3-none-any.whl ./boto3-1.35.59-py3-none-any.whl --target "${LAMBDA_TASK_ROOT}"
+RUN pip install cfnresponse ./botocore-1.35.59-py3-none-any.whl ./boto3-1.35.59-py3-none-any.whl --target "${LAMBDA_TASK_ROOT}"
 
 # Set the CMD to your handler (app.lambda_handler)
 CMD ["app.lambda_handler"]
