--- a/amzn-q-auth-tvm/package.json
+++ b/amzn-q-auth-tvm/package.json
@@ -17,6 +17,7 @@
     "aws-cdk-lib": "2.161.1",
     "cdk-nag": "^2.30.1",
     "constructs": "^10.0.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "uuid": "^11.0.3"
   }
 }
