Added auto subscription to q biz app creation

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ custom_service/*
 sample_tickets
 sample_tickets/*
 aim333-module-2.ipynb
+aim333-module-2.zip
 
 # CDK asset staging directory
 .cdk.staging
